apps/base/grocy/grocy-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grocy-ingressroute
  namespace: grocy
  annotations:
    gethomepage.dev/href: "https://grocy.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Grocy"
    gethomepage.dev/description: "Groceries & household management"
    gethomepage.dev/app: grocy
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/grocy.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`grocy.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: grocy
          port: 80
